tabla consultar ventas

--- a/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
+++ b/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
@@ -114,7 +114,7 @@
             </ng-container>
 
             <ng-container matColumnDef="numeroComprobante">
-              <mat-header-cell *matHeaderCellDef>NUM. COMPROBANTE</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>N° COMPROBANTE</mat-header-cell>
               <mat-cell *matCellDef="let comprobante" data-label="Comprobante">{{ comprobante.numeroComprobante }}</mat-cell>
             </ng-container>
 
