tabla consultar ventas

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -119,7 +119,7 @@
 
             <ng-container matColumnDef="acciones">
               <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
-              <mat-cell *matCellDef="let producto" data-label="Acciones">
+              <mat-cell *matCellDef="let venta" data-label="Acciones">
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verVenta(venta)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
