--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -18,8 +18,8 @@
             <input type="text" matInput [formControl]="txNumero"/>
           </mat-form-field>
         </div>
-        <div class="col-md-auto">
-          <mat-form-field appearance="outline" class="width-80">
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
             <mat-label>Forma de pago</mat-label>
             <mat-select [formControl]="txFormaDePago">
               <mat-option *ngFor="let formaDePago of formasDePago" [value]="formaDePago.id">
@@ -28,8 +28,8 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-md-auto">
-          <mat-form-field appearance="outline" class="width-80">
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
             <mat-label>Tipo de facturación</mat-label>
             <mat-select [formControl]="txTiposFactura">
               <mat-option *ngFor="let tipoFactura of tiposFactura" [value]="tipoFactura.id">
