--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -88,9 +88,7 @@
 
             <ng-container matColumnDef="nroventa">
               <mat-header-cell *matHeaderCellDef>N° VENTA</mat-header-cell>
-              <mat-cell *matCellDef="let venta">
-                <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
-              </mat-cell>
+              <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="montoTotal">
@@ -100,9 +98,7 @@
 
             <ng-container matColumnDef="fecha">
               <mat-header-cell *matHeaderCellDef >FECHA</mat-header-cell>
-              <mat-cell *matCellDef="let venta">
-                 {{ venta.fecha | date: 'dd/MM/yyyy' }}
-              </mat-cell>
+              <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="formaDePago">
@@ -124,7 +120,7 @@
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
                 <button mat-icon-button color="primary" matTooltip="Deshacer verta" (click)="desHacerVenta(venta)">
-                  <mat-icon class="eliminar">delete</mat-icon>
+                  <mat-icon class="eliminar">settings_backup_restore</mat-icon>
                 </button>
               </mat-cell>
             </ng-container>
