--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -66,7 +66,7 @@
 
                 <!-- Columna de interés -->
                 <ng-container matColumnDef="interes">
-                  <mat-header-cell *matHeaderCellDef>INTERÉS (%)</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef>% INTERÉS</mat-header-cell>
                   <mat-cell *matCellDef="let cuota">
                     <div (click)="toggleEdit(cuota, 'interes')" class="editable-cell">
                       <span *ngIf="!cuota.isEditingInteres">{{ cuota.interes }}%</span>
@@ -85,7 +85,7 @@
 
                 <!-- Columna de recargo -->
                 <ng-container matColumnDef="recargo">
-                  <mat-header-cell *matHeaderCellDef>RECARGO (%)</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef>% RECARGO</mat-header-cell>
                   <mat-cell *matCellDef="let cuota">
                     <div (click)="toggleEdit(cuota, 'recargo')" class="editable-cell">
                       <span *ngIf="!cuota.isEditingRecargo">{{ cuota.recargo }}%</span>
@@ -104,7 +104,7 @@
 
                 <!-- Columna de descuento -->
                 <ng-container matColumnDef="descuento">
-                  <mat-header-cell *matHeaderCellDef>DESCUENTO (%)</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef>% DESCUENTO</mat-header-cell>
                   <mat-cell *matCellDef="let cuota">
                     <div (click)="toggleEdit(cuota, 'descuento')" class="editable-cell">
                       <span *ngIf="!cuota.isEditingDescuento">{{ cuota.descuento }}%</span>
