--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
@@ -45,7 +45,7 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="promociones.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
@@ -90,10 +90,6 @@
 
           </mat-table>
 
-          <h6 *ngIf="!this.promociones.length" class="alert alert-secondary text-center">
-            No se encuentran promociones para mostrar, realice una nueva búsqueda.
-          </h6>
-
           <mat-paginator *ngIf="this.promociones.length > 0"
                          [length]="this.promociones.length"
                          [pageSize]="10"
@@ -102,6 +98,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.promociones.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran promociones para mostrar, realice una nueva búsqueda.
+  </h5>
 </div>
 
 
