--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
@@ -2,23 +2,19 @@
   <br>
   <div class="row">
     <div class="col">
-      <p class="titulo">Registrar promoción de producto</p>
+      <p class="titulo">Registrar promoción</p>
     </div>
   </div>
-
+  <br>
   <mat-divider></mat-divider>
 
-  <br>
   <form [formGroup]="form">
     <div class="row pt-4">
-      <div class="col-md-4">
+      <div class="col-md-8">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Nombre</mat-label>
           <input type="text" matInput [formControl]="txNombre"/>
         </mat-form-field>
-        <!--
-        <caja-control-messages [control]="txCodigo"></caja-control-messages>
-        -->
       </div>
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
@@ -26,25 +22,61 @@
           <input type="text" matInput [formControl]="txPorcentajeDescuento"/>
         </mat-form-field>
       </div>
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Producto</mat-label>
-          <input matInput
-                 placeholder="Ingrese"
-                 [formControl]="txProducto"
-                 [matAutocomplete]="autoCompleteProducto">
-        </mat-form-field>
-        <mat-autocomplete #autoCompleteProducto="matAutocomplete" (optionSelected)="enSeleccionDeProducto($event)">
-            <mat-option *ngFor="let producto of this.productosFiltrados" [value]="producto.nombre" [id]="producto.id.toString()">
-              {{ producto.nombre }}
-            </mat-option>
-        </mat-autocomplete>
-      </div>
     </div>
-
   </form>
+  <br>
 
-  <mat-divider></mat-divider>
+
+  <h3 class="subtitulo">Seleccionar productos:</h3>
+  <!-- loading -->
+  <div class="spinner-wrapper" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+  </div>
+  <mat-card *ngIf="!isLoading && listaProductos.length > 0">
+    <mat-card-content>
+      <div class="row">
+        <div class="col-md-12">
+          <mat-table [dataSource]="tableDataSource" matSort>
+            <ng-container matColumnDef="imgProducto">
+              <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
+              <mat-cell *matCellDef="let producto">
+                <img [src]="producto.imgProducto" class="img-thumbnail"/>
+              </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="producto">
+              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+              <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="precio">
+              <mat-header-cell *matHeaderCellDef>PRECIO</mat-header-cell>
+              <mat-cell *matCellDef="let producto" data-label="Precio">{{ producto.cantidadSeleccionada }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="seleccionar">
+              <mat-header-cell *matHeaderCellDef>SELECCIONAR</mat-header-cell>
+              <mat-cell *matCellDef="let producto" data-label="Seleccionar">
+
+              </mat-cell>
+            </ng-container>
+
+
+            <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
+            <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+
+          </mat-table>
+
+
+          <mat-paginator *ngIf="this.listaProductos.length > 0"
+                         [length]="this.listaProductos.length"
+                         [pageSize]="10"
+                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
   <br>
 
   <!-- Btn de cancelar y registrar -->
