--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
@@ -6,3 +6,10 @@
   border: 1px solid #ddd;
   margin: 5px 0;
 }
+
+.new-product-btn {
+  height: 75%;
+  float: right;
+  margin-top: auto;
+  margin-bottom: auto;
+}
