--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
@@ -65,8 +65,19 @@
             </ng-container>
 
             <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
-              <mat-cell *matCellDef="let promocion" data-label="Nombre del producto">{{ promocion.producto.nombre }}</mat-cell>
+              <mat-header-cell *matHeaderCellDef>PRODUCTOS</mat-header-cell>
+              <mat-cell *matCellDef="let promocion">
+                <div class="productos-container">
+                  <ng-container *ngFor="let producto of promocion.productos.slice(0, 3)">
+                    <span class="producto-circulo" [matTooltip]="producto.nombre">
+                    <img [src]="producto.imgProducto" alt="Producto" class="producto-imagen">
+                    </span>
+                  </ng-container>
+                  <span *ngIf="promocion.productos.length > 3" matTooltip="{{ getNombresProductos(promocion.productos) }}" class="mas-productos">
+                        +{{ promocion.productos.length - 3 }}
+                  </span>
+                </div>
+              </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="acciones">
