--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -113,7 +113,7 @@
               <mat-cell *matCellDef="let venta">
                 <div class="productos-container">
                   <ng-container *ngFor="let producto of venta.productos.slice(0, 3)">
-                    <span class="producto-circulo" [matTooltip]="producto.nombre">
+                    <span class="producto-circulo" [matTooltip]="producto.nombre" (click)="verProducto(producto)">
                     <img [src]="producto.imgProducto" alt="Producto" class="producto-imagen">
                     </span>
                   </ng-container>
