--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -127,7 +127,7 @@
 
     <!-- Columna de Subir Imagen -->
     <div class="col-md-3">
-      <div class="upload-container d-flex align-items-center mb-3"
+      <div class="upload-container d-flex align-items-center mb-2 mt-2"
            (dragover)="onDragOver($event)"
            (drop)="onDrop($event)"
            [ngClass]="{'disabled-container': data.formDesactivado}">
