fix: tamaños input empleados

--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -33,7 +33,7 @@
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Mail</mat-label>
-          <input type="text" matInput [formControl]="txMail"/>
+          <input type="email" matInput [formControl]="txMail"/>
         </mat-form-field>
       </div>
     </div>
