--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -53,7 +53,7 @@
 
 
   <mat-card-header class="header-card">
-    <h2 style="color: grey">Empleados encontrados</h2>
+    <h2 style="color: grey">Clientes encontrados</h2>
   </mat-card-header>
 
   <!-- loading -->
