--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -11,10 +11,11 @@
 
   <form [formGroup]="form">
 
+    <br>
+    <h3>Datos generales:</h3>
+    <mat-divider></mat-divider>
+
     <div class="row pt-4">
-      <h3>Datos generales:</h3>
-      <mat-divider></mat-divider>
-      <br>
 
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
@@ -32,7 +33,7 @@
 
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Mail</mat-label>
+          <mat-label>Email</mat-label>
           <input type="email" matInput [formControl]="txMail"/>
         </mat-form-field>
       </div>
@@ -73,7 +74,9 @@
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Fecha de nacimiento</mat-label>
-          <input type="date" matInput [formControl]="txFechaNacimiento"/>
+          <input matInput [matDatepicker]="pickerFechaNacimiento" [formControl]="txFechaNacimiento" />
+          <mat-datepicker-toggle matSuffix [for]="pickerFechaNacimiento"></mat-datepicker-toggle>
+          <mat-datepicker #pickerFechaNacimiento></mat-datepicker>
         </mat-form-field>
         <div *ngIf="form.get('txFechaNacimiento')?.touched || form.get('txFechaNacimiento')?.dirty">
           <div *ngIf="form.get('txFechaNacimiento')?.hasError('fechaInvalida')">
@@ -83,12 +86,13 @@
       </div>
     </div>
 
+    <br>
+    <h3>Domicilio:</h3>
+    <mat-divider></mat-divider>
+
     <div class="row pt-4">
-      <h3>Domicilio:</h3>
-      <mat-divider></mat-divider>
-      <br>
       <div class="col-md-3">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="w-100">
           <mat-label>Provincia</mat-label>
           <input matInput
                  placeholder="Ingrese"
@@ -102,7 +106,7 @@
         </mat-autocomplete>
       </div>
       <div class="col-md-3">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="w-100">
           <mat-label>Localidad</mat-label>
           <input matInput
                  placeholder="Ingrese"
